--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "url": "https://github.com/Tanatorn168/713_LAB02/issues"
   },
   "homepage": "https://github.com/Tanatorn168/713_LAB02#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.13.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  }
 }
