--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.775.0",
+    "@types/multer": "^1.4.12",
     "713_lab02": "file:",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0"
   }
 }
