--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@aws-sdk/client-s3": "^3.775.0",
     "@types/multer": "^1.4.12",
     "713_lab02": "file:",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0"
